Fix UI bug lines overflow

--- a/src/pages/Home/components/Instruction/Instruction.module.scss
+++ b/src/pages/Home/components/Instruction/Instruction.module.scss
@@ -14,13 +14,21 @@
     align-items: center;
   }
 
+  .lines {
+    flex-flow: wrap;
+  }
+
+  .line {
+    margin-bottom: 10px;
+  }
+
   .arrowRightIcon {
     width: 20px;
     margin-right: 5px;
   }
 
   .numOfStops {
-    margin: 10px 0 0;
+    margin: 0;
     font-size: 0.9rem;
   }
 
